@@ -5,6 +5,7 @@ Changelog
 ------------------
 
 - Fix soundcloud provider which can use https
+- Add screenr provider
 
 
 1.2.4 (2013-01-02)
